--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Electron from scratch</title>
+    <title>k8-electron-react</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
