--- a/website/public/index.html
+++ b/website/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <title>Lens | The Kubernetes IDE</title>
+  <title>The K8 Proxy Desktop Application</title>
 
   <!-- Styles -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
