--- a/website/public/index.html
+++ b/website/public/index.html
@@ -10,17 +10,12 @@
   <!-- Styles -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
-  <link href="%PUBLIC_URL%/css/bootstrap.css" rel="stylesheet">
-  <link href="%PUBLIC_URL%/css/fontawesome-all.css" rel="stylesheet">
-  <link href="%PUBLIC_URL%/css/magnific-popup.css" rel="stylesheet">
-  <link href="%PUBLIC_URL%/css/styles.css" rel="stylesheet">
-
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css" rel="stylesheet">
+ 
   <!-- Favicon: http://realfavicongenerator.net/ -->
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/favicon/apple-touch-icon.png?v=693PWAx2zB">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/favicon/favicon-32x32.png?v=693PWAx2zB">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/favicon/favicon-16x16.png?v=693PWAx2zB">
-  <link rel="mask-icon" href="%PUBLIC_URL%/images/favicon/safari-pinned-tab.svg?v=693PWAx2zB" color="#3d90ce">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicon/favicon.ico?v=693PWAx2zB">
+
   <meta name="msapplication-TileColor" content="#3d90ce">
   <meta name="msapplication-config" content="%PUBLIC_URL%/images/favicon/browserconfig.xml?v=693PWAx2zB">
   <meta name="theme-color" content="#ffffff">
@@ -31,12 +26,12 @@
   <div id="root"></div>
 
   <!-- Scripts -->
-  <script src="%PUBLIC_URL%/js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-  <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-  <script src="%PUBLIC_URL%/js/jquery.easing.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
   <!-- jQuery Easing for smooth scrolling between anchors -->
-  <script src="%PUBLIC_URL%/js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
-  <script src="%PUBLIC_URL%/js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script> <!-- Magnific Popup for lightboxes -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Morphext/2.4.4/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
   <script src="%PUBLIC_URL%/js/scripts.js"></script> <!-- Custom scripts -->
 
 </body>
