--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>k8-electron-react</title>
+    <title>k8-proxy-desktop</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap" rel="stylesheet">
   </head>
   <body style="width:100%;height:100%;margin:0; font-family: 'Roboto', sans-serif;">
     <div id="app" style="width:100%;height:100%;">
