As a user open desktop app he can see more details about the product on the home screen #45
As a user open desktop app he can see more details about the product on the home screen #45

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -27,12 +27,12 @@
 
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" onload="window.$ = window.jQuery = module.exports;"></script> <!-- Bootstrap framework -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"  onload="window.$ = window.jQuery = module.exports;"></script>
   <!-- jQuery Easing for smooth scrolling between anchors -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script> <!-- Magnific Popup for lightboxes -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Morphext/2.4.4/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
-  <script src="%PUBLIC_URL%/js/scripts.js"></script> <!-- Custom scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"  onload="window.$ = window.jQuery = module.exports;"></script> <!-- Magnific Popup for lightboxes -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Morphext/2.4.4/morphext.min.js"  onload="window.$ = window.jQuery = module.exports;"></script> <!-- Morphtext rotating text in the header -->
+  <script src="%PUBLIC_URL%/js/scripts.js"  onload="window.$ = window.jQuery = module.exports;"></script> <!-- Custom scripts -->
 
 </body>
 
