--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -4,6 +4,7 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> -->  
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://highlightjs.org/static/demo/styles/railscasts.css" />
   </head>
   <body style="width:100%;height:100%;margin:0; font-family: Roboto">
     <div id="app" style="width:100%;height:100%;">
